# ClosingIn

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ClosingIn.sln  premake5.lua  push.bat  test.bat
Closing/: main.cpp
Closing/Level-GreenHill/: GameLayer.cpp  GameLayer.h
ClosingIn/: ClosingIn.vcxproj  main.cpp
ClosingIn/Level-GreenHill/: GameLayer.cpp  GameLayer.h
ClosingIn/src/: main.cpp  pch.h
ClosingIn/src/Events/: Event.cpp  Event.h  Input.cpp  Input.h
Engine/includes/: EngineAPI.h  EngineInit.h
Engine/src/: Defines.h  Engine.cpp  Engine.h  EngineAPI.h  EngineTime.cpp  EngineTime.h  EntryPoint.h  pch.h
Engine/src/Debug/: Assert.cpp  Assert.h  Logger.cpp  Logger.h
Engine/src/Events/: Event.cpp  Event.h  EventType.h  Input.cpp  Input.h
Engine/src/Math/: Math.h
Engine/src/Renderer/: Renderer.cpp  Renderer.h
Engine/src/Renderer/OpenGL/: OpenGLBuffers.cpp  OpenGLBuffers.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShaders.cpp  OpenGLShaders.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Engine/src/SystemsManager/: Layer.h  LayerStack.cpp  LayerStack.h  Scene.h  SceneStack.cpp  SceneStack.h
Engine/src/Util/: ConsoleColours.h
Engine/src/Window/: Window.cpp  Window.h
bin-int/Debug-windows-x86_64/ClosingIn/: ClosingIn.exe.recipe  vc143.idb
bin-int/Debug-windows-x86_64/ClosingIn/ClosingIn.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ClosingIn.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
